Update personal information and styling in index.html

--- a/index.html
+++ b/index.html
@@ -2,258 +2,183 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Nikhil Jangir | Machine Repair & Automation Engineer</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<title>Ashok Swami | Assistant Manager – Machine Maintenance</title>
 
 <style>
-*{box-sizing:border-box}
-body{margin:0;font-family:'Poppins',sans-serif;background:#f5f7fb;color:#222}
-.hero{background:linear-gradient(135deg,#0a2540,#133b6f);color:#fff;padding:90px 20px}
-.hero-inner{max-width:1200px;margin:auto;display:grid;grid-template-columns:1fr 1fr;gap:50px;align-items:center}
-.hero img{width:280px;height:280px;border-radius:50%;border:6px solid rgba(255,255,255,.25);object-fit:cover}
-.hero h1{font-size:44px;margin:0}
-.hero h2{font-weight:400;margin:12px 0;color:#dce8ff}
-.hero p{font-size:16px;line-height:1.75;max-width:560px}
-.hero .info{margin-top:18px;font-size:14px;color:#cddcff}
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    background: #f4f6f9;
+    color: #333;
+}
+header {
+    background: #0a2540;
+    color: white;
+    padding: 30px 20px;
+    text-align: center;
+}
+header h1 {
+    margin: 0;
+    font-size: 32px;
+}
+header p {
+    margin: 5px 0;
+    font-size: 16px;
+}
 
-.section{max-width:1200px;margin:80px auto;padding:0 20px}
-.section h3{font-size:32px;margin-bottom:25px;color:#0a2540}
+section {
+    padding: 30px 20px;
+    max-width: 1000px;
+    margin: auto;
+    background: white;
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
 
-.cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(300px,1fr));gap:30px}
-.card{background:#fff;padding:32px;border-radius:18px;box-shadow:0 12px 35px rgba(0,0,0,.08)}
-.card h4{margin-top:0;color:#0a2540}
-.card p{font-size:15.5px;line-height:1.8}
+h2 {
+    border-left: 5px solid #0a2540;
+    padding-left: 10px;
+    color: #0a2540;
+}
 
-.timeline{display:grid;gap:40px}
-.job{background:#fff;padding:38px;border-radius:18px;box-shadow:0 12px 35px rgba(0,0,0,.08)}
-.job h4{margin:0;font-size:24px;color:#0a2540}
-.job span{font-size:14px;color:#666}
-.job p{margin-top:18px;line-height:1.9}
+ul {
+    padding-left: 20px;
+}
 
-.tags{display:flex;flex-wrap:wrap;gap:12px}
-.tag{background:#e8eef8;padding:10px 16px;border-radius:30px;font-size:14px}
+.skills span {
+    display: inline-block;
+    background: #e6ecf3;
+    padding: 8px 12px;
+    margin: 6px;
+    border-radius: 5px;
+    font-size: 14px;
+}
 
-footer{background:#0a2540;color:#cfd9ff;text-align:center;padding:35px 20px;font-size:14px}
+.job-title {
+    font-weight: bold;
+    margin-top: 15px;
+}
 
-@media(max-width:900px){
-.hero-inner{grid-template-columns:1fr;text-align:center}
-.hero img{margin:auto}
+footer {
+    background: #0a2540;
+    color: white;
+    text-align: center;
+    padding: 15px;
 }
 </style>
 </head>
 
 <body>
 
-<!-- HERO -->
-<section class="hero">
-<div class="hero-inner">
-<div>
-<h1>Nikhil Jangir</h1>
-<h2>Machine Repair & Automation Engineer | Team Leader</h2>
-<p>
-Hands-on Machine Repair Engineer with strong shop-floor experience across
-mobile manufacturing, automation-based assembly lines, testing systems
-and electrical infrastructure. Currently leading machine modification
-and reliability improvement activities at DBG India Technology Pvt Ltd.
-</p>
-<div class="info">
-📍 Village Dancholi, Narnaul, Mahendragarh, Haryana – 123001<br>
-📧 Nikhilkishanpura@gmail.com | 📞 +91 8447107097
-</div>
-</div>
-<img src="profile.jpg.png" alt="Nikhil Jangir">
-</div>
-</section>
+<header>
+    <h1>Ashok Swami</h1>
+    <p>Assistant Manager – Machine Repair & Maintenance (Engineering)</p>
+    <p>📍 Rewari, Haryana | 📧 Ashokkumarswami1988@gmail.com | 📞 +91-8130330600</p>
+</header>
 
-<!-- WHAT I DO -->
-<section class="section">
-<h3>What I Do on the Shop Floor</h3>
-<div class="cards">
-
-<div class="card">
-<h4>Pressing & Assembly Machines</h4>
-<p>
-Hands-on experience with back cover pressing, lens pressing, camera deco pressing
-and touch panel assembly machines. Responsible for press force calibration,
-fixture alignment, sensor troubleshooting and stable production output.
-</p>
-</div>
-
-<div class="card">
-<h4>Online Glue Dispensing Systems</h4>
-<p>
-Worked on online glue dispensing machines where accuracy is critical.
-Activities include path calibration, timing optimisation, nozzle alignment
-and defect control during continuous production.
-</p>
-</div>
-
-<div class="card">
-<h4>Plasma Cleaning Machines & Controllers</h4>
-<p>
-Maintained plasma cleaning machines used for surface activation before bonding.
-Involved in plasma controller repair, parameter tuning, interlock checks
-and process stabilisation for reliable assembly quality.
-</p>
-</div>
-
-<div class="card">
-<h4>RF Antenna Testing & Network Validation</h4>
-<p>
-Performed RF testing using CMW100 and CMW500 with Eragon and HQ software.
-Handled antenna plate alignment, 4G/5G band testing, failure analysis
-and corrective actions before final product release.
-</p>
-</div>
-
-<div class="card">
-<h4>Axis-Controlled & Automation Machines</h4>
-<p>
-Worked with multi-axis machines including robotic arms and Cartesian systems.
-Handled axis homing, positional accuracy checks, sensor feedback correction
-and coordination between mechanical and electrical systems.
-</p>
-</div>
-
-<div class="card">
-<h4>Machine Modification & Documentation</h4>
-<p>
-Actively involved in machine modification activities for new models.
-Prepared machine modification reports, implemented fixture changes,
-verified safety interlocks and supported process improvement initiatives.
-</p>
-</div>
-
-</div>
-</section>
-
-<!-- EXPERIENCE -->
-<section class="section">
-<h3>Professional Experience</h3>
-<div class="timeline">
-
-<div class="job">
-<h4>DBG India Technology Pvt Ltd, Bawal</h4>
-<span>Machine Repair Engineer (L4.2) – Team Leader | July 2023 – Present</span>
-<p>
-Leading machine maintenance, breakdown handling and modification activities
-for mobile manufacturing production lines. Responsible for MTTR reduction,
-MTBF improvement and OEE enhancement through strong RCA and preventive actions.
-</p>
-<p>
-Worked extensively with pressing machines, axis-controlled equipment,
-online glue dispensing systems, plasma cleaning machines, RF antenna testing
-setups and CCD-based automation machines. Coordinated with suppliers and
-cross-functional teams for machine modifications and new model support.
-PLC and HMI activities are handled during final machine stabilisation
-using FPWIN GR7 and Weinview software.
-</p>
-</div>
-
-<div class="job">
-<h4>Senstek India Pvt Ltd, Manesar</h4>
-<span>Machine Repair Engineer | Nov 2022 – July 2023</span>
-<p>
-Worked in a mobile camera manufacturing plant supporting precision assembly
-and testing machines in a Chinese MNC environment. Focused on breakdown control,
-process stability and quality-driven maintenance support.
-</p>
-</div>
-
-<div class="job">
-<h4>TXD (India) Technology Pvt Ltd, Bawal</h4>
-<span>Graduate Engineer Trainee (GET) | Jan 2020 – Oct 2022</span>
-<p>
-Completed structured training in mobile display manufacturing.
-Gained strong exposure to production machines, quality systems,
-preventive maintenance practices and shop-floor discipline.
-</p>
-</div>
-
-<div class="job">
-<h4>Adani Power, Pokhran</h4>
-<span>Supervisor – 33/132kV Substation | Aug 2019 – Jan 2020</span>
-<p>
-Supervised high-voltage substation operations, ensured electrical safety,
-monitored power distribution systems and supported preventive maintenance
-of critical electrical infrastructure.
-</p>
-</div>
-
-</div>
-</section>
-
-<!-- MACHINES -->
-<section class="section">
-<h3>Machines & Systems I Have Worked With</h3>
-<div class="tags">
-<span class="tag">Pressing & Assembly Machines</span>
-<span class="tag">Battery Rolling Machines (BRT)</span>
-<span class="tag">BTB Pressing Machines</span>
-<span class="tag">Axis-Controlled Machines</span>
-<span class="tag">Online Glue Dispensing Machines</span>
-<span class="tag">Plasma Cleaning Machines & Controllers</span>
-<span class="tag">RF Antenna Testing Systems</span>
-<span class="tag">CMW100 / CMW500</span>
-<span class="tag">RF 4G / 5G Cable Buckling</span>
-<span class="tag">Idle Current Testers</span>
-<span class="tag">CCD Vision Systems</span>
-<span class="tag">LabVision Assembly Machines</span>
-<span class="tag">Industrial Robotic Arms</span>
-<span class="tag">PLC & HMI Supported Automation</span>
-</div>
-</section>
-<section class="section" style="text-align:center">
-    <h3>My Resume</h3>
+<section>
+    <h2>Professional Summary</h2>
     <p>
-        View or download my detailed professional resume.
+        Assistant Manager – Engineering with 9+ years of experience in machine repair,
+        preventive & corrective maintenance, and production equipment management in
+        high-volume electronics manufacturing. Strong expertise in TPM, KAIZEN, RCA,
+        CAPA, and leading maintenance teams to improve equipment uptime, MTTR, MTBF,
+        FPY, and production stability.
     </p>
+</section>
 
-    <!-- RESUME BUTTONS -->
-    <div style="margin-top:25px">
-        
-        <!-- DOWNLOAD -->
-        <a href="Nikhil_Jangir_Resume.docx" download
-           style="background:#0a2540;color:white;padding:14px 28px;
-                  border-radius:30px;font-size:15px;margin:10px;display:inline-block">
-            ⬇ Download Resume (DOCX)
-        </a>
-
-        <!-- VIEW -->
-        <a href="Nikhil_Jangir_Resume.docx" target="_blank"
-           style="background:#e8eef8;color:#0a2540;padding:14px 28px;
-                  border-radius:30px;font-size:15px;margin:10px;display:inline-block">
-            👁 View Resume
-        </a>
-
+<section>
+    <h2>Core Skills & Technical Competencies</h2>
+    <div class="skills">
+        <span>Machine Repair & Troubleshooting</span>
+        <span>Preventive / Predictive Maintenance (TPM)</span>
+        <span>PLC Programming</span>
+        <span>Electrical Troubleshooting</span>
+        <span>Machine Modification</span>
+        <span>MTTR / MTBF / FPY Improvement</span>
+        <span>Root Cause Analysis (Why-Why, Fishbone)</span>
+        <span>CAPA Implementation</span>
+        <span>KAIZEN & POKA-YOKE</span>
+        <span>5S & Safety Compliance</span>
+        <span>Spare Parts Planning</span>
+        <span>Vendor Coordination</span>
     </div>
 </section>
-<section class="section" style="text-align:center">
-    <h3>Scan My Website & Resume</h3>
-    <p>Scan this QR code to open my professional portfolio.</p>
 
-    <img 
-      src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://nikjangir.github.io"
-      alt="Website QR Code"
-      style="display:block;margin:25px auto">
+<section>
+    <h2>Professional Experience</h2>
 
-    <div style="margin-top:25px">
-        <a href="Nikhil_Jangir_Resume.docx" download
-           style="background:#0a2540;color:white;padding:14px 26px;
-                  border-radius:30px;margin:8px;display:inline-block">
-            ⬇ Download Resume
-        </a>
+    <p class="job-title">DBG Technology (I) Pvt. Ltd. – Electronics Manufacturing</p>
 
-        <a href="Nikhil_Jangir_Resume.docx" target="_blank"
-           style="background:#e8eef8;color:#0a2540;padding:14px 26px;
-                  border-radius:30px;margin:8px;display:inline-block">
-            👁 View Resume
-        </a>
-    </div>
+    <p class="job-title">Assistant Manager – Machine Repair & Maintenance (July 2025 – Present)</p>
+    <ul>
+        <li>Leading maintenance operations for assembly, glue dispensing, CCD, BTB, and tester lines</li>
+        <li>Managing and mentoring multi-skilled maintenance teams</li>
+        <li>Driving preventive maintenance strategies to improve equipment uptime</li>
+        <li>Monitoring MTTR, MTBF, FPY, downtime, and rejection trends</li>
+        <li>Conducting root cause analysis and implementing permanent solutions</li>
+        <li>Handling machine modifications, PLC changes, and safety interlocks</li>
+        <li>Supporting customer and internal audits</li>
+    </ul>
+
+    <p class="job-title">Senior Engineer – Machine Repair (June 2018 – June 2025)</p>
+    <ul>
+        <li>Handled complex breakdowns in high-volume production</li>
+        <li>Improved FPY and reduced machine downtime</li>
+        <li>Implemented KAIZEN and POKA-YOKE activities</li>
+        <li>Prepared daily and monthly maintenance reports</li>
+    </ul>
+
+    <p class="job-title">Engineer – Machine Repair (March 2016 – May 2018)</p>
+    <ul>
+        <li>Hands-on machine repair and preventive maintenance</li>
+        <li>Maintained machine logs and breakdown history</li>
+        <li>Supported equipment validation and RCA activities</li>
+    </ul>
+
+    <p class="job-title">Samsung Electronics Pvt. Ltd. – Service Engineer (2014 – 2016)</p>
+    <ul>
+        <li>PCBA and electronic repair up to L4 level</li>
+        <li>Component-level fault analysis</li>
+        <li>Improved repair turnaround time</li>
+        <li>Supported quality and customer audits</li>
+    </ul>
 </section>
+
+<section>
+    <h2>Machine & Technical Expertise</h2>
+    <ul>
+        <li>Glue Dispensing Machines</li>
+        <li>CCD & CCD Screw Machines</li>
+        <li>BTB Machines</li>
+        <li>Screw & Three-in-One Machines</li>
+        <li>Air Tightness Testers</li>
+        <li>Assembly & Testing Automation</li>
+        <li>Jigs & Fixtures</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Education</h2>
+    <ul>
+        <li>Diploma – Electronics & Telecommunication Engineering (Delhi)</li>
+        <li>Diploma – Mobile Engineering (Gurgaon)</li>
+        <li>12th & 10th – Board of School Education Haryana</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Personal Details</h2>
+    <ul>
+        <li>Date of Birth: 01 March 1988</li>
+        <li>Languages: English, Hindi</li>
+        <li>Nationality: Indian</li>
+    </ul>
+</section>
+
 <footer>
-© 2025 Nikhil Jangir · Professional Engineering Portfolio
+    <p>© 2025 Ashok Swami | Engineering Maintenance Professional</p>
 </footer>
 
 </body>
