Update title in index.html for better clarity

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nikhil Jangir | Senior Equipment Engineer | Complete Premium Portfolio</title>
+    <title>Nikhil Jangir | Sr. Machine Repair Engineer | Equipment Handling Specialist | Jigs & Fixtures Modification Expert | Mobile Testing & Validation | Team Leader | Complete Premium Portfolio</title>
     
     <!-- PWA Configuration -->
     <link rel="manifest" href="manifest.json">
